@@ -56,7 +56,11 @@ def toolchainPropertyName = 'javaToolchainEnabled'
 
 def useToolchain = project.hasProperty(toolchainPropertyName) ? project.getProperty(toolchainPropertyName).toBoolean() : false
 
-ext.defaultJvmArgs = ['--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED', '--add-opens=java.base/java.nio=ALL-UNNAMED']
+ext.defaultJvmArgs = [
+    '--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED',
+    '--add-opens=java.base/java.nio=ALL-UNNAMED',
+    '-Djava.security.manager=allow'  // https://github.com/spring-projects/spring-kafka/issues/3619
+]
 
 if (useToolchain) {
     def baselineLanguageVersion = JavaLanguageVersion.of(baselineJavaVersion.toString())
